--- a/index.html
+++ b/index.html
@@ -1,22 +1,56 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-	<head>
-		<meta charset="utf-8">
-		<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="style.css">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title></title>
-	</head>
+<head>
+	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title></title>
+</head>
 
+<body>
+	<header>
+		<nav class="navbar navbar-default">
+			<div class="container">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapse-navbar-menu" arial-expanded="false">
+						<span class="sr-only">Toggle Navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>		
 
+					<a class="navbar-brand" href="#">TopCasaFina Arquitetura</a>	
+				</div>		
 
+				<div class="collapse navbar-collapse" id="collapse-navbar-menu">
+					<ul class="nav navbar-nav">
+						<li><a href="#sobre-nos-menu">Sobre Nós</a></li>
+						<li><a href="#nossos-projetos-menu">Nossos Projetos</a></li>
+						<li><a href="#depoimentos-menu">Depoimentos</a></li>
+						<li><a href="#video-institucional-menu">Vídeo Institucional</a></li>
+						<li><a href="#contato-menu">Contato</a></li>
+					</ul>
+				</div>
+			</div>						
+		</nav>
 
-	<body>
-		<section class="container">
-			<h2>Sobre nós</h2>
-			<img class="img-responsive" src="img/empresa.jpg">
-		
-			<div class="panel panel-group" id="paineis-sobre">
+		<div class="container TopCasaFina-bannerWrapper">
+			<div class="topcasafina-banner">
+				<h1>TopCasaFina Arquitetura</h1>
+				<p>Projetando a casa dos sonhos desde 2000 A.C</p>
+				<button type="button" class="btn btn-primary btn-lg" type="submit">Contate-nos agora</button>
+			</div>
+		</div>
+	</header>
+
+	<section class="container" id="sobre-nos-menu">
+		<h2>Sobre nós</h2>
+			
+		<div class="row">	
+			<img class="img-responsive col-sm-6" src="img/empresa.jpg">
+
+			<div class="panel panel-group col-sm-6" id="paineis-sobre">
 				<div class="panel panel-default">
 					<div class="panel-heading">
 						<h3 class="panel-title" data-toggle="collapse" data-target="#primeiro-paragrafo" data-parent="#paineis-sobre">Desde 1935</h3>
@@ -50,171 +84,195 @@
 					</div>	
 				</div>
 			</div>	
-		</section>	
-			<script src="jquery.js"></script>
-			<script src="bootstrap.min.js"></script>
+		</div>
+	</section>	
 
-		<div class="jumbotron">
-			<div class="container">
-				<h3 class="premios-em-design">Mais de 300 prêmios em design e em conforto.</h3>
-				<p>Mais de 5 milhões de clientes satisfeitos em todo o mundo.</p>
+	<div class="jumbotron">
+		<div class="container">
+			<h3 class="premios-em-design">Mais de 300 prêmios em design e em conforto.</h3>
+			<p>Mais de 5 milhões de clientes satisfeitos em todo o mundo.</p>
+		</div>
+	</div>	
+
+	<section class="container" id="nossos-projetos-menu">
+		<h2>Nossos Projetos</h2>
+
+		<div class="row">
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<figure class="thumbnail">
+					<img src="img/projetos/casa-castelo.png" alt="Foto da Casa Castelo">
+					<figcaption class="caption">
+						<h3>Casa Castelo</h3>
+						<p>A Casa Castelo é o último lançamento da TopCasaFina Arquitetura, feita por um monge.</p>
+					</figcaption>
+				</figure>
+			</div>
+
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<figure class="thumbnail">
+					<img src="img/projetos/casa-lago.png" alt="Foto da Casa Lago">
+					<figcaption class="caption">
+						<h3>Casa Lago</h3>
+						<p>A Casa do Lago foi lar de inúmeros pessoas que conheciam o presidente da época.</p>
+					</figcaption>
+				</figure>
+			</div>
+
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<figure class="thumbnail">
+					<img src="img/projetos/mercado-marapira.png" alt="Foto do Mercado Marapira">
+					<figcaption class="caption">			
+						<h3>Mercado Marapira</h3>
+						<p>O mercado Marapira foi projetado nos mínimos detalhes da arquitetura baseada em frutas.</p>
+					</figcaption>
+				</figure>
+			</div>		
+
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<figure class="thumbnail">
+					<img src="img/projetos/palacio-dionisio.png" alt="Foto do Palácio Dionísio">
+					<figcaption class="caption">			
+						<h3>Palácio Dionísio</h3>
+						<p>O palácio Dionísio foi eleito pela revista 'Grandes Palácios' como o palácio mais lindo do mundo.</p>
+					</figcaption>
+				</figure>	
+			</div>
+
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<figure class="thumbnail">
+					<img src="img/projetos/residencia-ludi.png" alt="Foto da Residência Ludi">
+					<figcaption class="caption">			
+						<h3>Residência Ludi</h3>
+						<p>A residência Ludi foi projetada para ser a mais bela casa de São Paulo pela revista Housing.</p>
+					</figcaption>
+				</figure>
 			</div>
 		</div>	
+	</section>
 
+	<section class="depoimentos" id="depoimentos-menu">
+		<h2 class="container titulo-depoimentos">Depoimentos de Clientes</h2>
 
-		<section class="container">
-			<h2>Nossos Projetos</h2>
+		<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+			<!-- Indicators -->
+			<ol class="carousel-indicators">
+				<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+				<li data-target="#carousel-example-generic" data-slide-to="1"></li>
+				<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+			</ol>
 
-			<figure class="thumbnail">
-				<img src="img/projetos/casa-castelo.png" alt="Foto da Casa Castelo">
-				<figcaption class="caption">
-					<h3>Casa Castelo</h3>
-					<p>A Casa Castelo é o último lançamento da TopCasaFina Arquitetura, feita por um monge.</p>
-				</figcaption>
-			</figure>
-			
-			<figure class="thumbnail">
-				<img src="img/projetos/casa-lago.png" alt="Foto da Casa Lago">
-				<figcaption class="caption">
-					<h3>Casa Lago</h3>
-					<p>A Casa do Lago foi lar de inúmeros pessoas que conheciam o presidente da época.</p>
-				</figcaption>
-			</figure>
+			<!-- Wrapper for slides -->
+			<div class="carousel-inner" role="listbox">
+				<div class="item active">
+					<img src="img/depoimentos/depoimento1.png" alt="Gostei muito e rápido o serviço. Depoimento de Yuri Padilha.">
+					<div class="carousel-caption">
+						<h3>Yuri Padilha</h3>
+						<p>Gostei muito e rápido o serviço.</p>
+					</div>
+				</div>
 
-			<figure class="thumbnail">
-				<img src="img/projetos/mercado-marapira.png" alt="Foto do Mercado Marapira">
-				<figcaption class="caption">			
-					<h3>Mercado Marapira</h3>
-					<p>O mercado Marapira foi projetado nos mínimos detalhes da arquitetura baseada em frutas.</p>
-				</figcaption>
-			</figure>		
+				<div class="item">
+					<img src="img/depoimentos/depoimento2.png" alt="Excelente trabalho. Depoimento de Fernando Stafaneni">
+					<div class="carousel-caption">
+						<h3>Fernando Stafaneni</h3>
+						<p>Excelente trabalho.</p>
+					</div>
+				</div>
 
-			<figure class="thumbnail">
-				<img src="img/projetos/palacio-dionisio.png" alt="Foto do Palácio Dionísio">
-				<figcaption class="caption">			
-					<h3>Palácio Dionísio</h3>
-					<p>O palácio Dionísio foi eleito pela revista 'Grandes Palácios' como o palácio mais lindo do mundo.</p>
-				</figcaption>
-			</figure>	
+				<div class="item">
+					<img src="img/depoimentos/depoimento3.png" alt="Gostei, competência em primeiro lugar. Depoimento de Caio Sauzas">
+					<div class="carousel-caption">
+						<h3>Caio Sauzas</h3>
+						<p>Gostei, competência em primeiro lugar.</p>
+					</div>
+				</div>
 
-			<figure class="thumbnail">
-				<img src="img/projetos/residencia-ludi.png" alt="Foto da Residência Ludi">
-				<figcaption class="caption">			
-					<h3>Residência Ludi</h3>
-					<p>A residência Ludi foi projetada para ser a mais bela casa de São Paulo pela revista Housing.</p>
-				</figcaption>
-			</figure>
-		</section>
-
-		<section class="depoimentos">
-			<h2 class="container titulo-depoimentos">Depoimentos de Clientes</h2>
-
-			<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-			  <!-- Indicators -->
-			  <ol class="carousel-indicators">
-			    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-			    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-			    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-			  </ol>
-
-			  <!-- Wrapper for slides -->
-			  <div class="carousel-inner" role="listbox">
-			    <div class="item active">
-			      <img src="img/depoimentos/depoimento1.png" alt="Gostei muito e rápido o serviço. Depoimento de Yuri Padilha.">
-			      <div class="carousel-caption">
-			     	 <h3>Yuri Padilha</h3>
-					<p>Gostei muito e rápido o serviço.</p>
-			      </div>
-			    </div>
-
-			    <div class="item">
-			      <img src="img/depoimentos/depoimento2.png" alt="Excelente trabalho. Depoimento de Fernando Stafaneni">
-			      <div class="carousel-caption">
-			      	<h3>Fernando Stafaneni</h3>
-					<p>Excelente trabalho.</p>
-			      </div>
-			    </div>
-
-			     <div class="item">
-			      <img src="img/depoimentos/depoimento3.png" alt="Gostei, competência em primeiro lugar. Depoimento de Caio Sauzas">
-			      <div class="carousel-caption">
-			      	<h3>Caio Sauzas</h3>
-					<p>Gostei, competência em primeiro lugar.</p>
-			      </div>
-			    </div>
-
-			  </div>
-
-			  <!-- Controls -->
-			  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-			    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-			    <span class="sr-only">Previous</span>
-			  </a>
-			  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-			    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-			    <span class="sr-only">Next</span>
-			  </a>
 			</div>
-		</section>
 
-	
-		<div class="container">
-			<h3>Vídeo Institucional</h3>
+			<!-- Controls -->
+			<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+				<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+				<span class="sr-only">Previous</span>
+			</a>
+			<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+				<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+				<span class="sr-only">Next</span>
+			</a>
+		</div>
+	</section>
+
+	<div class="container">
+		<div class="row">
+			<section id="video-institucional-menu" class="col-sm-6">
+				<h2>Vídeo Institucional</h2>
 
 				<div class="embed-responsive embed-responsive-16by9">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/i_3Pv1AygeI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>"></iframe>
-			</div>
-		</div>
-
-		<section class="container">
-		<h3>Contato</h3>
-		<p>Entre em contato conosco</p>
-		
-		<form>
-			<div class="form-group">
-				<label for="nome">Nome: </label>
-				<input type="text" class="form-control" id="nome" required placeholder="Digite o seu nome e sobrenome">
-			</div>
-
-			<div class="form-group">
-				<label for="email">E-mail:</label>
-				<div class="input-group">
-					<div class="input-group-addon">@</div>
-					<input type="email" class="form-control" id="email" required placeholder="Digite o seu @email">
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/i_3Pv1AygeI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</div>
-			</div>
+			</section>	
 
-			<div class="grupo-radio">
-				<div class="radio">
-					<label>
-						<input type="radio" name="tipo-pessoa">
-						Pessoa Física
-					</label>
-				</div> 
+		<section id="contato-menu" class="col-sm-6">
+			<h2>Contato</h2>
+			<p>Entre em contato conosco</p>
 
-				<div class="radio">	
-					<label>
-						<input type="radio" name="tipo-pessoa" checked>
-						Pessoa Jurídica
-					</label>
-				</div> 
-			</div><!--
+			<form>
+				<div class="form-group">
+					<label for="nome">Nome: </label>
+					<input type="text" class="form-control" id="nome" required placeholder="Digite o seu nome e sobrenome">
+				</div>
 
-			--><select class="contato-select form-control">
-				<option>Tipo de Situação</option>
-				<option>Casa</option>
-				<option>Apartamento</option>
-				<option>Mansão</option>
+				<div class="form-group">
+					<label for="email">E-mail:</label>
+					<div class="input-group">
+						<div class="input-group-addon">@</div>
+						<input type="email" class="form-control" id="email" required placeholder="Digite o seu @email">
+					</div>
+				</div>
 
-			</select>
+				<div class="grupo-radio">
+					<div class="radio">
+						<label>
+							<input type="radio" name="tipo-pessoa">
+							Pessoa Física
+						</label>
+					</div> 
 
-		</form>
+					<div class="radio">	
+						<label>
+							<input type="radio" name="tipo-pessoa" checked>
+							Pessoa Jurídica
+						</label>
+					</div> 
+						</div><!--
 
-			<input type="submit" value="Enviar" class="enviar">
+					--><select class="contato-select form-control">
+						<option>Tipo de Situação</option>
+						<option>Casa</option>
+						<option>Apartamento</option>
+						<option>Mansão</option>
+					</select>
+				</form>
+				<button type="button" class="btn btn-primary" type="submit">Enviar</button>
+			</section>
+		</div>
+	</div>
+	
+	<footer>
+		<address>
+			<strong>TopCasaFina Arquitetura</strong><br>
+		Rua Vergueiro, 3185, Vila Mariana</br>
+	São Paulo, SP</br>
+	Tel:(11)5571-2751 ou (11)5083-3884
+</address>
 
-		</section>
+<address>	
+	E-mail: contato.topcasafina@alura.com.br
+</address>
+	</footer>
 
+<script src="jquery.js"></script>
+<script src="bootstrap.min.js"></script>
+<script src="navbar-animation-fix.js"></script>
 
-
-	</body>
+</body>
 </html>
